--- a/build.xml
+++ b/build.xml
@@ -1,8 +1,8 @@
 <project name="Test" basedir="." default="main">
 
-    <property name="src.dir"     value="src"/>
+    <property name="src.dir"     value="TestJavaProject/src"/>
 
-    <property name="build.dir"   value="build"/>
+    <property name="build.dir"   value="TestJavaProject/build"/>
     <property name="classes.dir" value="${build.dir}/classes"/>
     <property name="jar.dir"     value="${build.dir}/jar"/>
 
